Add node regeneration