@@ -1,9 +1,7 @@
 package org.tomsoch;
 
 import java.util.*;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
+import java.util.concurrent.*;
 
 public class Facility {
     private final int workerTrainingCost;
@@ -16,41 +14,50 @@ public class Facility {
     private final Set<Integer> emptyNodes;
     private final Random random;
     private int resources;
+    private final int regenerationTime;
+    private final int regeneratedResources;
+    private final ScheduledExecutorService regenerationScheduler;
 
     public Facility(int initialResources, int workerTrainingCost, int workerProductionTime,
                     int workerTravelTime, int resourceCollectingTime, int workerCapacity,
-                    ResourceNode[] nodes) {
+                    ResourceNode[] nodes, int regenerationTime, int regeneratedResources) {
         this.resources = initialResources;
         this.workerTrainingCost = workerTrainingCost;
         this.workerProductionTime = workerProductionTime;
         this.workerTravelTime = workerTravelTime;
         this.resourceCollectingTime = resourceCollectingTime;
         this.workerCapacity = workerCapacity;
-        this.workerPool = Executors.newCachedThreadPool();
+        this.workerPool = Executors.newVirtualThreadPerTaskExecutor();
         this.resourceNodes = nodes;
         this.emptyNodes = Collections.newSetFromMap(new ConcurrentHashMap<>());
         this.random = new Random();
+        this.regenerationTime = regenerationTime;
+        this.regeneratedResources = regeneratedResources;
+        this.regenerationScheduler = Executors.newSingleThreadScheduledExecutor();
     }
 
-    public synchronized void reportEmptyNode(int nodeId, int workerId) {
+    public void reportEmptyNode(int nodeId, int workerId) {
         emptyNodes.add(nodeId);
         System.out.println("Facility registered that node " + nodeId + " is empty, info from the worker " + workerId);
+
+        regenerationScheduler.schedule(() -> {
+            ResourceNode node = resourceNodes[nodeId];
+            synchronized(node) {
+                node.resetResources(regeneratedResources);
+            }
+            emptyNodes.remove(nodeId);
+            System.out.println("Node " + nodeId + " regenerated with " + regeneratedResources + " resources");
+        }, regenerationTime, TimeUnit.MILLISECONDS);
     }
 
     public ResourceNode assignResourceNode() {
-        List<ResourceNode> availableNodes = new ArrayList<>();
-        for (ResourceNode node : resourceNodes) {
-            if (!emptyNodes.contains(node.getId())) {
-                availableNodes.add(node);
-            }
-        }
+        List<ResourceNode> availableNodes = Arrays.stream(resourceNodes)
+                .filter(node -> !emptyNodes.contains(node.getId()))
+                .toList();
 
-        if (availableNodes.isEmpty()) {
-            System.out.println("No more available resource nodes!");
-            return null;
-        }
-
-        return availableNodes.get(random.nextInt(availableNodes.size()));
+        return availableNodes.isEmpty() ?
+                null :
+                availableNodes.get(random.nextInt(availableNodes.size()));
     }
 
     public void startOperation(int startingWorkers, int targetWorkers) throws InterruptedException {
